chrome/browser/resources/file_manager/css/file_manager.css
/* ... */
#directory-tree .tree-item.accepts > .tree-row,
body[new-ui] #volume-list > .accepts,
#list-container list > li.accepts,
#list-container grid > li.accepts {
  -webkit-animation: acceptsBlink 200ms linear 1s 3;
}

@-webkit-keyframes acceptsBlink {
  0% {
    background-color: transparent;
  }
  50% {
  }
}

.table-row-cell .selection-label {
  -webkit-margin-end: 10px;
}

.table-row-cell .filename-label,
.thumbnail-item .filename-label,
/* Show ellipsis in cells. The name column has different structure and overrides
   this rule. */
.table-row-cell > div {
  display: block;
  overflow: hidden;
  text-overflow: ellipsis;
  white-space: nowrap;
}

/* Text box used for renaming in the detail list. */
.table-row-cell input.rename {
  -webkit-margin-start: -3px;
  border-width: 0;
  line-height: 20px;
}

input.rename:focus {
  outline-color: rgb(77, 144, 254);
}

input.rename {
  font: inherit;
  line-height: 1;
  text-align: inherit;
}

.table-row-cell .filename-label,
.table-row-cell input.rename {
  -webkit-box-flex: 1;
}

[renaming] > .filename-label {
  display: none;
}

/* Text box used for renaming in the thumbnail list. */
.thumbnail-grid input.rename {
  -webkit-margin-start: -1px;
  box-sizing: border-box;
  height: 20px;
  width: 114px;
}

/* The cr.ui.Table representing the detailed file list. */
.detail-table {
  border: 0;
  width: 100%;
}

/* Bottom pane describing current selection. */
body:not([new-ui]) .preview-panel {
  -webkit-box-align: center;
  -webkit-box-orient: horizontal;
  -webkit-transform: translate(0, 0);
  background-color: #f0f0f0;
  display: -webkit-box;
  height: 61px;
  opacity: 1;
  padding: 0 16px 0 7px;
  position: relative;
  z-index: 3;
}

body[new-ui] .preview-panel {
  -webkit-box-align: center;
  -webkit-box-orient: horizontal;
  -webkit-transition: background-color 150ms ease;
  background: rgba(255, 255, 255, 0.9);
  border-top: 1px solid rgb(225, 225, 225);
  bottom: 0;
  display: -webkit-box;
  height: 51px;
  left: 0;
  opacity: 1;
  padding: 0 12px 0 7px;
  position: absolute;
  right: 0;
  z-index: 3;
}

body:not([new-ui]) .preview-panel[visibility=hiding],
body[new-ui] .preview-panel[visibility=hiding] {
  /* Using all seems to cause preview panel and checkbox flicking issue. */
  -webkit-transform: translate(0, 5px);
  opacity: 0;
  transition: opacity 220ms ease;
}

body:not([new-ui]) .preview-panel[visibility=hidden],
body[new-ui] .preview-panel[visibility=hidden] {
  display: none;
  opacity: 0;
}

.preview-thumbnails {
  -webkit-box-orient: horizontal;
  display: -webkit-box;
  padding-left: 39px;
}

body[new-ui] .preview-thumbnails {
  padding-left: 25px;
}

.preview-thumbnails > .thumbnail {
  background-color: #f2f2f2;
  border: 1px solid #fff;
  box-shadow: 0 2px 6px rgba(0, 0, 0, 0.2);
  height: 45px;
  margin: 0 0 0 -39px;  /* Show 7 pixels of the overlapped image */
  position: relative;
  width: 45px;
}

body[new-ui] .preview-thumbnails > .thumbnail {
  border: 1px solid #fff;
  box-shadow: 0 1px 1px rgba(80, 80, 80, 0.5);
  height: 35px;
  margin: 0 0 0 -25px;  /* Overlapped images. */
  width: 35px;
}

body[new-ui] .preview-thumbnails > .thumbnail {
  background-color: white;
}

.preview-thumbnails > .thumbnail > .img-container {
  background-size: 45px 45px;
  height: 45px;
  overflow: hidden;
  position: relative;
  width: 45px;
}

body[new-ui] .preview-thumbnails > .thumbnail > .img-container {
  background-size: 35px 35px;
  border: 1px solid white;
  box-sizing: border-box;
  height: 35px;
  width: 35px;
}

@-webkit-keyframes fadeIn {
  from {
    opacity: 0;
  }
  to {
    opacity: 1;
  }
}

.preview-thumbnails > .popup {
  -webkit-transform: translate(0, 3px) scale(0.95);
  background-color: #f2f2f2;
  border: 2px solid #fff;
  box-shadow: 0 0 0 1px #F0F0F0,
              0 0 0 2px #D0D0D0,
              2px 2px 6px rgba(0, 0, 0, 0.2);
  margin: 6px 0 0 -40px;
  opacity: 0;
  pointer-events: none;
  position: absolute;
  z-index: 1;
}

.preview-thumbnails > .popup > img {
  -webkit-user-drag: none;
}

.preview-thumbnails > * {
  transition: all 180ms ease-in;
  transition-delay: 300ms;
}

.preview-thumbnails.has-zoom:hover > .popup {
  -webkit-transform: translate(0, 0) scale(1.0);
  opacity: 1;
  pointer-events: auto;
}

.preview-thumbnails.has-zoom:hover > .thumbnail {
  opacity: 0;
}

/* cr.ui.Table has a black focus border by default, which we don't want. */
.detail-table:focus {
  border: 0;
}

/* Table splitter element */
.table-header-splitter {
  -webkit-border-start: 1px #d4d4d4 solid;
  background-color: inherit;
  height: 27px;
}

body[new-ui] .table-header-splitter {
  background-image: -webkit-image-set(
    url('../images/files/ui/new-ui/vertical_separator.png') 1x,
    url('../images/files/ui/new-ui/2x/vertical_separator.png') 2x);
  background-position: center;
  background-repeat: repeat-y;
  border: none;
  height: 20px;
  top: 10px;
  width: 5px;
}

/* Container for a table header. */
.table-header {
  background-color: #f5f5f5;
  border-bottom: 1px #d2d2d2 solid;
  box-sizing: border-box;
  height: 27px;
}

body[new-ui] .table-header {
  background-color: transparent;
  border-bottom: none;
  height: 47px;
}

.table-header-sort-image-desc::after {
  -webkit-padding-start: 13px;
  background-image: -webkit-image-set(
    url('../images/files/ui/sort_desc.png') 1x,
    url('../images/files/ui/2x/sort_desc.png') 2x);
  background-position: center center;
  background-repeat: no-repeat;
  color: #888;
  content: '\00a0';
  position: relative;
  top: 1px;
}

.table-header-sort-image-asc::after {
  -webkit-padding-start: 13px;
  background-image: -webkit-image-set(
    url('../images/files/ui/sort_asc.png') 1x,
    url('../images/files/ui/2x/sort_asc.png') 2x);
  background-position: center center;
  background-repeat: no-repeat;
  color: #888;
  content: '\00a0';
  position: relative;
  top: -1px;
}

.preview-container .table-header {
  border-radius: 0 4px 0 0;
}
/* ... */

